babeld-1.6.2 (unreleased)

  * Changed router-id computation to use all interfaces, which increases
    the chances of a stable id.
  * Changed the format of babel-state to only contain the seqno -- the
    validation of router-id was useless, and actually harmful when the
    router-id changed multiple times.
  * Fixed a bug with native source-specific routing.  Thanks to Matthieu
    Boutier.

16 June 2015: babeld-1.6.1.

  * Fixed a buffer overflow in zone_equal.  This is probably not
    exploitable, but might cause incorrect routing tables in the presence
    of source-specific routing.
  * Added support for defaulting ipv6-subtrees automatically based on the
    kernel version.
  * Fixed compilation under musl.

14 April 2015: babeld-1.6.0

  * Added support for source-specific routing.  Thanks to Matthieu Boutier.
  * Added support for reflecting metrics as kernel priorities.  Thanks to
    Pierre Pfister.
  * Worked around a Linux kernel bug with an infinite EAGAIN loop.  Thanks
    to Dave Taht.
  * Changed wildcard updates to not set flag 0x40.  Reported by Markus
    Stenberg.
  * Made ipv6-subtrees a runtime option.  Thanks to Matthieu Boutier.

4 July 2014: babeld-1.5.1:

  * Added support for reading multiple configuration files by specifying
    the -c command-line flag multiple times.
  * Be less noisy about unknown TLV types.  Thanks to Baptiste Jonglez.

22 May 2014: babeld-1.5.0

  * Added support for an RTT-based metric -- see the description of
    "enable-timestamps" in the manual page.  This work was done by
    Baptiste Jonglez with help from Matthieu Boutier.

15 November 2013: babeld-1.4.3

  * Added random-id option to config file (equivalent to -r).
  * Fixed parsing of compressed IPv4 updates.  Thanks to Matthieu Boutier.
  * Fixed formatting of seqno requests with short prefixes.  Thanks to
    Matthieu Boutier.
  * Fixed possible DoS on the local interface.  Thanks to Baptiste Jonglez.