@@ -1,5 +1,6 @@
 babeld-1.6.2 (unreleased)
 
+  * Added the ability to specify a router-id explicitly (-R).
   * Changed router-id computation to use all interfaces, which increases
     the chances of a stable id.
   * Changed the format of babel-state to only contain the seqno -- the
